# kaggle_getting_started

digit_recognizer/: .gitignore  pyproject.toml
housing_prices/: choose_model.ipynb  explore_data.ipynb  pass_kaggle.ipynb  pyproject.toml  submission.csv
spaceship_titanic/: .gitignore  choose_model.ipynb  explore_data.ipynb  pyproject.toml
